--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic_Toc_Toe_Game</title>
+    <title>Tic_Tac_Toe_Game</title>
 
     <link rel="stylesheet" href="style.css">
 
